unit test for generated kafka asyncapi spec